# holistic-wind-farm-control

./: .gitignore  README.md  exploration.html  exploration.ipynb  optimisation.html  optimisation.ipynb  playground.ipynb  pyproject.toml  turbulent_kinetic_energy.ipynb  utils.py
